--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "prestart": "shx cp -n .env.default .env",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,7 +27,6 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "nodemon": "2.0.14",
-    "prettier": "2.4.1",
-    "shx": "0.3.3"
+    "prettier": "2.4.1"
   }
 }
